jasn/examples/invalid/duplicate_keys.jasn
/* Duplicate keys are not allowed */
{
  key: 1,
  key: 2
}
